# library-management-web-application

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
backend/: app.py  fixture.py  fixtures.py  manage.py  models.py  requirements.txt  useful_commands.md
backend/accounts/: admin.py  forms.py  models.py  test_models.py
backend/accounts/migrations/: 0001_initial.py
backend/apis/: serializers.py  tests.py  urls.py  views.py
backend/books/: models.py  tests.py  urls.py  views.py
backend/books/migrations/: 0001_initial.py  0002_rename_books_book.py
backend/books/templates/: book_list.html
backend/catalog/: admin.py  catalog_fixtures.json  models.py  serializers.py  tests.py  urls.py  views.py
backend/catalog/migrations/: 0001_initial.py  0002_alter_book_summary.py  0002_bookinstance.py  0003_alter_author_date_of_birth_and_more.py  0004_alter_author_date_of_birth_and_more.py
backend/library_project/: settings.py  urls.py
frontend/: fixtures.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.vue
frontend/src/components/: BookDetails.vue  BookList.vue  Books.vue  NavBar.vue  Ping.vue
frontend/src/composables/: useApi.ts
frontend/src/router/: index.ts
frontend/src/views/: BooksView.vue  HelloView.vue  HomeView.vue  PingView.vue
